--- a/StoryApplication/ClientApp/stories-clientapp/src/app/story-display/story-display.component.css
+++ b/StoryApplication/ClientApp/stories-clientapp/src/app/story-display/story-display.component.css
@@ -2,6 +2,11 @@ table {
   width: 100%;
 }
 
+.full-width {
+  font-size: 14px;
+  width: 100%;
+}
+
 .spinner-container {
   position: fixed;
   top: 50%;
