--- a/StoryApplication/ClientApp/stories-clientapp/src/app/story-display/story-display.component.html
+++ b/StoryApplication/ClientApp/stories-clientapp/src/app/story-display/story-display.component.html
@@ -2,49 +2,53 @@
   <mat-spinner></mat-spinner>
 </div>
 
-<mat-form-field appearance="standard" class="full-width">
-  <!--<mat-label>Filter</mat-label>-->
-  <input matInput
-         (keyup)="applyFilter($event)"
-         placeholder="Search Columns"
-         #input />
-</mat-form-field>
+
+
 <div class="row" class="mat-elevation-z8 gridData" *ngIf="resultStories.length > 0">
-  <div class="col">
-    <table mat-table [dataSource]="dataSource" matSort>
-      <!-- ID Column -->
-      <ng-container matColumnDef="storyId">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
-        <td mat-cell *matCellDef="let element"> {{element.storyId}} </td>
-      </ng-container>
+  <mat-form-field>
+    <input matInput type="text" (keyup)="applyFilter($event)" placeholder="Filter">
+  </mat-form-field>
+    <div class="col">
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
+        <!-- ID Column -->
+        <ng-container matColumnDef="storyId">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            ID
+          </th>
+          <td mat-cell *matCellDef="let element"> {{element.storyId}} </td>
+        </ng-container>
 
-      <!-- Title  Column -->
-      <ng-container matColumnDef="storyTitle">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Title</th>
-        <td mat-cell *matCellDef="let element">
-          {{element.storyTitle}}
-        </td>
-      </ng-container>
+        <!-- Title  Column -->
+        <ng-container matColumnDef="storyTitle">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            Title
+          </th>
+          <td mat-cell *matCellDef="let element">
+            {{element.storyTitle}}
+          </td>
+        </ng-container>
 
-      <!-- URL Column -->
-      <ng-container matColumnDef="storyUrl">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>URL</th>
-        <td mat-cell *matCellDef="let element">
-          <a href="{{element.storyUrl}}" target="_blank">
-            {{element.storyUrl}}
-          </a>
-        </td>
-      </ng-container>
+        <!-- URL Column -->
+        <ng-container matColumnDef="storyUrl">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            URL
+          </th>
+          <td mat-cell *matCellDef="let element">
+            <a href="{{element.storyUrl}}" target="_blank">
+              {{element.storyUrl}}
+            </a>
+          </td>
+        </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true" class="primary"
-          style="vertical-align: middle;">
-      </tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true" class="primary"
+            style="vertical-align: middle;">
+        </tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-      <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" colspan="4">No data matching</td>
-      </tr>
-    </table>
-    <mat-paginator [pageSize]="pageSize" [length]="pageLength" showFirstLastButtons></mat-paginator>
-  </div>
+        <tr class="mat-row" *matNoDataRow>
+          <td class="mat-cell" colspan="4">No data matching</td>
+        </tr>
+      </table>
+      <mat-paginator [pageSize]="pageSize" [length]="pageLength" showFirstLastButtons></mat-paginator>
+    </div>
 </div>
